{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 13,
  "lineage": "c672b77d-8f6e-a6ae-d122-bad17dec24ad",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "Globant-IP-Data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/740b5b77-fe5a-43a4-9d6f-7d2476e389fe/resourceGroups/Globant-RG/providers/Microsoft.Network/publicIPAddresses/vm-ip-01",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "vm-ip-01",
            "resource_group_name": "Globant-RG",
            "sku": "Basic",
            "tags": {
              "environment": "DEV"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "Interface_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/740b5b77-fe5a-43a4-9d6f-7d2476e389fe/resourceGroups/Globant-RG/providers/Microsoft.Network/networkInterfaces/VM-NIC",
            "internal_domain_name_suffix": "gqnjjjas2jhupnqw25onw1pohd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/740b5b77-fe5a-43a4-9d6f-7d2476e389fe/resourceGroups/Globant-RG/providers/Microsoft.Network/publicIPAddresses/vm-ip-01",
                "subnet_id": "/subscriptions/740b5b77-fe5a-43a4-9d6f-7d2476e389fe/resourceGroups/Globant-RG/providers/Microsoft.Network/virtualNetworks/VN-01/subnets/VN-Subnet-01"
              }
            ],
            "location": "eastus",
            "name": "VM-NIC",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Globant-RG",
            "tags": {
              "envoriment": "DEV"
            }
          },
          "dependencies": [
            "azurerm_public_ip.Globant_PublicIP",
            "azurerm_resource_group.Globant",
            "azurerm_subnet.Globant_subnet",
            "azurerm_virtual_network.VN-Globant"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Globant-NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/740b5b77-fe5a-43a4-9d6f-7d2476e389fe/resourceGroups/Globant-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-Globant",
            "location": "eastus",
            "name": "NSG-Globant",
            "resource_group_name": "Globant-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "NSG-Rule-01",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "22",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "enviroment": "DEV"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Globant"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "Globnat_NSG_Rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/740b5b77-fe5a-43a4-9d6f-7d2476e389fe/resourceGroups/Globant-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-Globant/securityRules/NSG-Rule-01",
            "name": "NSG-Rule-01",
            "network_security_group_name": "NSG-Globant",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "Globant-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "22",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.Globant-NSG",
            "azurerm_resource_group.Globant"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "Globant_PublicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/740b5b77-fe5a-43a4-9d6f-7d2476e389fe/resourceGroups/Globant-RG/providers/Microsoft.Network/publicIPAddresses/vm-ip-01",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "vm-ip-01",
            "resource_group_name": "Globant-RG",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "DEV"
            }
          },
          "dependencies": [
            "azurerm_resource_group.Globant"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Globant_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/740b5b77-fe5a-43a4-9d6f-7d2476e389fe/resourceGroups/Globant-RG/providers/Microsoft.Network/virtualNetworks/VN-01/subnets/VN-Subnet-01",
            "name": "VN-Subnet-01",
            "resource_group_name": "Globant-RG",
            "virtual_network_name": "VN-01"
          },
          "dependencies": [
            "azurerm_resource_group.Globant",
            "azurerm_virtual_network.VN-Globant"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "Globnant_NSG_Associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/740b5b77-fe5a-43a4-9d6f-7d2476e389fe/resourceGroups/Globant-RG/providers/Microsoft.Network/virtualNetworks/VN-01/subnets/VN-Subnet-01",
            "network_security_group_id": "/subscriptions/740b5b77-fe5a-43a4-9d6f-7d2476e389fe/resourceGroups/Globant-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-Globant",
            "subnet_id": "/subscriptions/740b5b77-fe5a-43a4-9d6f-7d2476e389fe/resourceGroups/Globant-RG/providers/Microsoft.Network/virtualNetworks/VN-01/subnets/VN-Subnet-01"
          },
          "dependencies": [
            "azurerm_network_security_group.Globant-NSG",
            "azurerm_resource_group.Globant",
            "azurerm_subnet.Globant_subnet",
            "azurerm_virtual_network.VN-Globant"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VN-Globant",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a4941a34-e212-474f-b616-e7dcdb6dee3b",
            "id": "/subscriptions/740b5b77-fe5a-43a4-9d6f-7d2476e389fe/resourceGroups/Globant-RG/providers/Microsoft.Network/virtualNetworks/VN-01",
            "location": "eastus",
            "name": "VN-01",
            "resource_group_name": "Globant-RG",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/740b5b77-fe5a-43a4-9d6f-7d2476e389fe/resourceGroups/Globant-RG/providers/Microsoft.Network/virtualNetworks/VN-01/subnets/VN-Subnet-01",
                "name": "VN-Subnet-01",
                "security_group": "/subscriptions/740b5b77-fe5a-43a4-9d6f-7d2476e389fe/resourceGroups/Globant-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-Globant"
              }
            ],
            "tags": {
              "enviroment": "DEV"
            }
          },
          "dependencies": [
            "azurerm_resource_group.Globant"
          ]
        }
      ]
    }
  ]
}